--- a/index.html
+++ b/index.html
@@ -4,7 +4,9 @@
     <meta charset="UTF-8">
     <link rel="icon" href="/favicon.ico">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Vite App</title>
+    <meta property="og:title" content="Triangle Minesweeper">
+    <meta name="twitter:card" content="summary">
+    <title>Triangle Minesweeper</title>
   </head>
   <body>
     <div id="app"></div>
